# e-commerce-microservices-example

./: docker-compose.yml
services/api-gateway-nodejs/: Dockerfile  README.md  index.ts  package.json
services/cart-nodejs/: Dockerfile  README.md  index.ts  package.json
services/inventory-cpp/: CMakeLists.txt  Dockerfile  main.cpp
services/inventory-java/: Dockerfile  pom.xml
services/inventory-java/src/main/java/com/ecommerce/inventory_service/: InventoryItem.java
services/inventory-java/src/main/java/com/ecommerce/inventoryservice/: InventoryController.java  RedisConfig.java
services/inventory-java/src/main/resources/: application.properties
services/orders-python/: Dockerfile  main.py  requirements.txt
services/orders-python/sql/: V1__Create_orders_tables.sql
services/products-nodejs/: Dockerfile  README.md  index.ts  package.json
services/users-go/: Dockerfile  go.mod  go.sum  main.go
services/users-go/sql/: V1__Create_users_table.sql
